cluster/pastebin/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: pastebin-http
  name: pastebin-http
  namespace: pastebin
spec:
  type: ClusterIP
  ipFamilies:
    - IPv4
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: pastebin
  sessionAffinity: None
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: pastebin-ssh
  name: pastebin-ssh
  namespace: pastebin
spec:
  type: LoadBalancer
  ipFamilies:
    - IPv4
  ports:
    - port: 2222
      protocol: TCP
      targetPort: 2222
  selector:
    app: pastebin
  sessionAffinity: None
